syntax = "proto3";

package api.helloworld.v1;

option go_package = "helloworld/api/helloworld/v1;v1";
option java_multiple_files = true;
option java_package = "api.helloworld.v1";

service Video {
  rpc CreateVideo (CreateVideoRequest) returns (CreateVideoReply);
}

message CreateVideoRequest {
  string name = 1;
  string link = 2;
  repeated string tags = 3;
  string description = 4;
  string author = 5;
  string format = 6;
}

message CreateVideoReply {
  bool success = 1;
  string message = 2;
}
